# Oculus

./: README.md  pyproject.toml
Oculus/FasterRCNN/: detectron2.py
Oculus/SSD/: ssd300_vgnet16.py  ssd30_nvidia.py
Oculus/Yolo/: V11.py  V8.py
example/Yolo/: detection_object_in_yolov11.py  export_model_onnx_on_yolo.md  video_detection_with_yolov11.py
test/: main_tester.py
test/FasterRCNN/: detectorn2_tester.py
